# trab3-persistencia

./: .env  Dockerfile  README.md  divisao_tarefas.txt  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  database.py  dependencies.py
app/models/: category.py  complaint.py  complaint_status.py  documento.py  location.py  service_response.py  user.py
app/routes/: categories.py  complaints.py  documents.py  service_responses.py  statuses.py  users.py
app/services/: minio_service.py
scripts/: seed_data.py
