[project]
name = "sistema-denuncias-urbanas"
version = "1.0.0"
description = "Sistema de Gerenciamento de Denúncias Urbanas"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "beanie>=1.26.0,<2.0.0",
    "motor>=3.5.0",
    "pydantic[email]>=2.8.0",
    "pydantic-settings>=2.4.0",
    "email-validator>=2.1.0",
    "minio>=7.2.0",
    "python-multipart>=0.0.9",
    "fastapi-pagination>=0.12.26",
    "faker>=26.0.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
